src/test/deca/syntax/invalid/multistring-in-print.synt
multistring-in-print.deca:11: